syntax = "proto3";

package blog;

option go_package = ".";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string  content = 4;
}

message BlogId {
  string id = 1;
}

service BlogService {
  rpc CreateBlog (Blog) returns (BlogId) {
    option(google.api.http) = {
      post: "/v1/blog",
      body: "*"
    };
  };
  rpc ReadBlog (BlogId) returns (Blog) {
    option(google.api.http) = {
      get: "/v1/blog/{id}",
    };
  };
  rpc UpdateBlog (Blog) returns (google.protobuf.Empty) {
    option(google.api.http) = {
      put: "/v1/blog/{id}",
      body: "*"
    };
  };
  rpc DeleteBlog(BlogId) returns (google.protobuf.Empty) {
    option(google.api.http) = {
      delete: "/v1/blog/{id}"
    };
  };
  rpc ListBlog (google.protobuf.Empty) returns (stream Blog) {
    option(google.api.http) = {
      get: "/v1/blog"
    };
  };
}
